--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       href="https://fonts.googleapis.com/css2?family=Halant:wght@300;400;500;600;700&family=Hammersmith+One&family=Hanuman:wght@100;300;400;700;900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Jomolhari&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
+    <link rel="preload" as="image" href="/assets/home_img.png" />
+    <link
+      rel="preload"
+      as="image"
+      href="/assets/LOGO KANTOR NEW COMPRESSED.png"
+    />
   </head>
   <body>
     <div id="root"></div>
